Finishing users-crud app

--- a/finished-apps/users-crud/src/components/UI/Card/Card.module.css
+++ b/finished-apps/users-crud/src/components/UI/Card/Card.module.css
@@ -1,6 +1,7 @@
-.user-form {
+.container {
   width: 50%;
   background-color: #fff;
   padding: 20px;
   border-radius: 16px;
+  margin-top: 16px;
 }
