--- a/finished-apps/users-crud/src/components/User/UserItem/UserItem.module.css
+++ b/finished-apps/users-crud/src/components/User/UserItem/UserItem.module.css
@@ -1,16 +1,17 @@
 .list-item {
   list-style: none;
   position: relative;
-  padding: 8px;
+  padding: 12px;
+  border: 1px solid #ccc;
 }
 
 .actions {
   position: absolute;
-  z-index: 999;
-  top: 10px;
+  z-index: 900;
+  top: 12px;
   right: 8px;
 }
 
-.icon {
-  margin-right: 8px;
+.actions button {
+  margin-right: 12px;
 }
