--- a/finished-apps/users-crud/src/index.css
+++ b/finished-apps/users-crud/src/index.css
@@ -8,11 +8,6 @@ body {
   background-color: #333;
   width: 100vw;
   height: 100vh;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex: 1; */
 }
 
 #root {
@@ -23,4 +18,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
 }
