--- a/finished-apps/users-crud/src/components/User/UserItem/UserItem.module.scss
+++ b/finished-apps/users-crud/src/components/User/UserItem/UserItem.module.scss
@@ -10,8 +10,8 @@
   z-index: 900;
   top: 12px;
   right: 8px;
-}
 
-.actions button {
-  margin-right: 12px;
+  & button {
+    margin-right: 12px;
+  }
 }
