--- a/finished-apps/react-meals/src/styles/styles.scss
+++ b/finished-apps/react-meals/src/styles/styles.scss
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-size: 1rem;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #333;
 }
 
 button,
