--- a/finished-apps/react-meals/src/feature/Meals/MealItem/style.module.scss
+++ b/finished-apps/react-meals/src/feature/Meals/MealItem/style.module.scss
@@ -45,5 +45,10 @@
   input {
     padding: 0.25rem;
     font-size: 1rem;
+    border: 1px solid #ad5502;
+
+    &:focus {
+      outline: none;
+    }
   }
 }
