Finishing react-meals challenge

--- a/finished-apps/react-meals/src/feature/Cart/Cart/style.module.scss
+++ b/finished-apps/react-meals/src/feature/Cart/Cart/style.module.scss
@@ -1,12 +1,9 @@
-.cart {
-}
-
 .cart-items {
-  //   list-style: none;
   all: unset;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  overflow-y: auto;
 }
 
 .total-amount {
