--- a/0-finished-apps/2-react-meals/src/components/Button/style.module.scss
+++ b/0-finished-apps/2-react-meals/src/components/Button/style.module.scss
@@ -7,16 +7,22 @@
   padding: 0.25rem 2rem;
   border-radius: 20px;
   font-weight: bold;
-  transition: all 0.3s ease-in;
+  transition: all 0.15s ease-in;
   filter: brightness(1);
 
-  &:hover,
-  &:active {
+  &:hover:not(:disabled) {
     filter: brightness(0.8);
   }
 
-  &:focus {
+  &:active:not(:disabled) {
     filter: brightness(0.6);
+  }
+
+  &:disabled {
+    background-color: #ccc;
+    border: 1px solid #ccc;
+    color: #666;
+    cursor: not-allowed;
   }
 
   &.outline {
