Adding CartForm to react meals and enabling order creation

--- a/0-finished-apps/2-react-meals/src/components/Input/style.module.scss
+++ b/0-finished-apps/2-react-meals/src/components/Input/style.module.scss
@@ -9,12 +9,24 @@
   }
 
   input {
-    padding: 0.25rem;
+    padding: 0.5rem;
     font-size: 1rem;
     border: 1px solid #ad5502;
 
     &:focus {
       outline: none;
+    }
+  }
+}
+
+.invalid {
+  input {
+    border: 1px solid #b40e0e;
+    background-color: #fddddd;
+
+    &:focus {
+      border-color: #ff8800;
+      background-color: #fbe8d2;
     }
   }
 }
