--- a/0-finished-apps/2-react-meals/src/feature/Cart/Cart/style.module.scss
+++ b/0-finished-apps/2-react-meals/src/feature/Cart/Cart/style.module.scss
@@ -10,6 +10,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 1.5rem;
   font-weight: bold;
+  margin-bottom: 1.5rem;
+
+  span {
+    font-size: 1.5rem;
+  }
 }
